cabal-version: 2.4
name: advent-of-code
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author: Melanie Brown
maintainer: brown.m@pm.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    build-depends:
      base ^>=4.15.0.0
      , containers
      , lens
      , linear
      , nonempty-containers
      , parsec
      , relude
      , time
      , time-compat
      , toolbox
      , vector
    default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      EmptyCase
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
    ghc-options: -O2 -Wall
    hs-source-dirs:
      lib
    default-language:
      Haskell2010
    mixins:
      base hiding (Prelude)
      , relude (Relude as Prelude)
      , relude

executable advent-of-code
    main-is:
      Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.15.0.0
      , advent-of-code
      , relude
    default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      EmptyCase
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
    ghc-options: -O2 -Wall
    hs-source-dirs:
      app
    default-language:
      Haskell2010
    mixins:
      base hiding (Prelude)
      , relude (Relude as Prelude)
      , relude
