cabal-version: 2.4
name: advent-of-code
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author: Melanie Brown
maintainer: brown.m@pm.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common advent
    build-depends:
      base ^>=4.15.0.0
      , adjunctions
      , aeson
      , arithmoi
      , comonad
      , containers
      , cryptonite
      , directory
      , distributive
      , filepath
      , group-theory
      , lens
      , lens-aeson
      , linear
      , nonempty-containers
      , parsec
      , poly
      , relude
      , semirings
      , unordered-containers
      , template-haskell
      , text
      , time
      , time-compat
      , toolbox
      , vector
    default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      EmptyCase
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
    ghc-options: -O2 -Wall
    default-language:
      Haskell2010
    mixins:
      base hiding (Prelude)
      , relude (Relude as Prelude)
      , relude

library
    import: advent
    exposed-modules:
      Advent
      Advent.Output
    other-modules:
      Advent.Coordinates
      Advent.D4
      Advent.Functions
      Advent.Infinite
      Advent.Input
      Advent.Numbers
      Advent.Orphans
      Advent.Parsers
      Advent.Polynomials
    hs-source-dirs:
      lib

executable advent-of-code
    import: advent
    main-is:
      Main.hs

    other-modules:
      
    build-depends:
      advent-of-code
    hs-source-dirs:
      app

executable advent15
    import: advent
    main-is:
      Main.hs

    other-modules:
      Day01
      Day02
      Day03
      Day04
      Day05
      Day06
      Day07
      Day08
      Day09
      Day10
      Day11
      Day12
      Day13
      Day14
      Day15
      Day16
      Day17
      Day18
      Day19
      Day20
      Day21
      Day22
      Day23
      Day24
      Day25

    build-depends:
      advent-of-code
    hs-source-dirs:
      app/Advent15
