cabal-version: 3.4
name: advent-of-code
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author: Melanie Brown
maintainer: brown.m@pm.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common advent
    build-depends:
      base >= 4.14.3.0 && < 5
      , adjunctions ^>= 4.4
      , advent-of-code-api ^>= 0.2.8
      , aeson ^>= 2.0.2
      , arithmoi ^>= 0.12
      , bifunctors ^>= 5.5.11
      , comonad ^>= 5.0.8
      , containers ^>= 0.6.5
      , cryptonite ^>= 0.29
      , data-fix
      , directory
      , distributive
      , filepath
      , fixed-vector ^>= 1.2.1
      , free
      , group-theory
      , hgeometry ^>= 0.13
      , hgeometry-combinatorial ^>= 0.13
      , lens ^>= 5.1
      , lens-aeson ^>= 1.1.3
      , nonempty-containers
      , parsec ^>= 3.1.15
      , poly ^>= 0.5
      , primitive
      , recursion-schemes ^>= 5.2.2
      , relude ^>= 1.0.0.1
      , semigroupoids ^>= 5.3.6
      , semirings ^>= 0.6
      , unordered-containers ^>= 0.2.15
      , template-haskell
      , text
      , time
      , time-compat ^>= 1.9.6
      , toolbox
      , vector
    default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      EmptyCase
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
    ghc-options: -O2 -Wall
    default-language:
      Haskell2010
    mixins:
      base hiding (Prelude)
      , relude (Relude as Prelude)
      , relude
      , advent-of-code-api (Advent as AdventAPI, Advent.API as AdventAPI.API, Advent.Types as AdventAPI.Types)

library
    import: advent
    exposed-modules:
      Advent
      Advent.Output
    other-modules:
      Advent.Coordinates
      Advent.D4
      Advent.Functions
      Advent.Infinite
      Advent.Input
      Advent.Numbers
      Advent.Orphans
      Advent.Parsers
      Advent.Polynomials
      Advent.Suspension
    hs-source-dirs:
      lib

executable advent-of-code
    import: advent
    main-is:
      Main.hs

    other-modules:
      
    build-depends:
      advent-of-code
    hs-source-dirs:
      app

executable advent15
    import: advent
    main-is:
      Main.hs

    other-modules:
      Day01
      Day02
      Day03
      Day04
      Day05
      Day06
      Day07
      Day08
      Day09
      Day10
      Day11
      Day12
      Day13
      Day14
      Day15
      Day16
      Day17
      Day18
      Day19
      Day20
      Day21
      Day22
      Day23
      Day24
      Day25

    build-depends:
      advent-of-code
    hs-source-dirs:
      app/Advent15

executable advent16
    import: advent
    main-is:
      Main.hs

    other-modules:
      Day01
      Day02
      Day03
      Day04
      Day05
      Day06
      Day07
      Day08
      Day09
      Day10
      Day11
      -- Day12
      -- Day13
      -- Day14
      -- Day15
      -- Day16
      -- Day17
      -- Day18
      -- Day19
      -- Day20
      -- Day21
      -- Day22
      -- Day23
      -- Day24
      -- Day25

    build-depends:
      advent-of-code
    hs-source-dirs:
      app/Advent16

executable advent17
    import: advent
    main-is:
      Main.hs

    other-modules:
      Day01
      Day02
      Day03
      Day04
      Day05
      Day06
      Day07
      Day08
      Day09
      Day10
      Day11
      Day12
      Day13
      Day14
      Day15
      Day16
      Day17
      Day18
      Day19
      Day20
      Day21
      Day22
      Day23
      Day24
      Day25

    build-depends:
      advent-of-code
    hs-source-dirs:
      app/Advent17

executable advent18
    import: advent
    main-is:
      Main.hs

    other-modules:
      Day01
      -- Day02
      -- Day03
      -- Day04
      -- Day05
      -- Day06
      -- Day07
      -- Day08
      -- Day09
      -- Day10
      -- Day11
      -- Day12
      -- Day13
      -- Day14
      -- Day15
      -- Day16
      -- Day17
      -- Day18
      -- Day19
      -- Day20
      -- Day21
      -- Day22
      -- Day23
      -- Day24
      -- Day25

    build-depends:
      advent-of-code
    hs-source-dirs:
      app/Advent18
